chandeliers-lus/tests/fail/ui/tc/const/call.stderr
error: Expression #0 is not const: const expressions must not contain any function calls
 --> tests/fail/ui/tc/const/call.rs:2:5
  |
2 |     const X : float = float(5);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
